fix columns resize + cell selection

--- a/src/style.css
+++ b/src/style.css
@@ -119,6 +119,7 @@ table {
 
 td, th {
   border: 1px solid #ccc;
+  overflow: hidden;
 }
 
 .table-header-cell {
@@ -182,6 +183,7 @@ td, th {
   height: auto;
   resize: none;
   background: white;
+  overflow: auto;
 }
 
 
