--- a/src/components/Table/components/TableHeader/TableHeader.scss
+++ b/src/components/Table/components/TableHeader/TableHeader.scss
@@ -29,6 +29,10 @@
   padding: 10px 5px;
 }
 
+.TableHeader__cell-content--select {
+  padding: 10px 15px;
+}
+
 .TableHeader__cell-fix {
   width: 0;
   overflow: hidden;
