--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -4,15 +4,13 @@
   max-width: 100%;
   margin: auto;
   height: 100%;
-  border: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
 
   display: flex;
   flex-direction: column;
   position: relative;
 
-  &:not(.Table--screen-reader) {
-    border-top: 0;
-  }
 }
 
 .Table__screen-reader-table {
