--- a/src/components/Table/components/TableCell/TableCell.scss
+++ b/src/components/Table/components/TableCell/TableCell.scss
@@ -2,46 +2,26 @@
 
 .TableCell {
   border-bottom: 1px solid #ccc;
-
-  tr:last-child .TableCell {
-    border-bottom: 0;
-  }
+  position: relative;
 }
 
 .TableCell:not(:first-child) {
   padding-left: 1px;
 }
 
-.TableCell--focused {
-  padding: 0;
-  overflow: visible;
-  position: relative;
-}
-
 
 
 
 .TableCell__content {
-  font: inherit;
-  border: 0;
-  resize: none;
-  background: transparent;
-
   outline: 0;
+  background: transparent;
   text-align: center;
   overflow: hidden;
-  cursor: default;
-  min-width: 100%;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 
   white-space: pre;
   text-overflow: ellipsis;
-  padding: 10px 5px;
-}
-
-.TableCell__content--screen-reader:focus {
-  outline: 3px solid dodgerblue;
 }
 
 .TableCell__content--select {
@@ -51,6 +31,7 @@
 .TableCell__content--readonly {
   color: #888;
   font-style: italic;
+  padding: 10px 5px;
 }
 
 .TableCell__content--formula {
@@ -68,25 +49,82 @@
   }
 }
 
-.TableCell__content--selected {
-  z-index: 10;
+// .TableCell__content--selected {
+//   z-index: 10;
+//   box-shadow: inset 0 0 0 3px dodgerblue;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   min-height: 100%;
+// }
+
+.TableCell__value {
+  font: inherit;
+  background: transparent;
+  border: 0;
+  padding: 10px 5px;
+  display: block;
+  outline: 0;
+  text-align: inherit;
+  width: 100%;
+  white-space: pre;
+  text-overflow: ellipsis;
+  overflow: hidden;
+
+  &:focus {
+    box-shadow: inset 0 0 0 3px dodgerblue;
+  }
+}
+
+.TableCell__content:focus {
   box-shadow: inset 0 0 0 3px dodgerblue;
+}
+
+.TableCell__textarea {
+  display: none;
+  //box-shadow: inset 0 0 0 1px dodgerblue;
+  outline: 0;
+  font: inherit;
+  width: 100%;
+  height: 100%;
+  background: white;
+  overflow: auto;
+  padding: 10px 5px;
+  border: 0;
   position: absolute;
   top: 0;
   left: 0;
-  min-height: 100%;
+  text-align: inherit;
+  z-index: 1;
+}
+
+.TableCell__textarea:focus {
+  box-shadow: inset 0 0 0 3px dodgerblue;
 }
 
 .TableCell__content--editing {
-  box-shadow: inset 0 0 0 3px dodgerblue;
-  min-width: 100%;
-  min-height: 100%;
-  max-width: 200px;
-  max-height: 150px;
-  width: auto;
-  height: auto;
-  resize: none;
-  background: white;
-  overflow: auto;
-  text-align: left;
+  overflow: visible;
+
+  .TableCell__textarea {
+    display: block;
+  }
+
+  .TableCell__value {
+    display: none;
+  }
 }
+
+
+// .TableCell__content--editing {
+//   box-shadow: inset 0 0 0 3px dodgerblue;
+//   min-width: 100%;
+//   min-height: 100%;
+//   max-width: 200px;
+//   max-height: 150px;
+//   width: auto;
+//   height: auto;
+//   resize: none;
+//   background: white;
+//   overflow: auto;
+//   text-align: left;
+// }
