--- a/src/components/Table/components/TableHeader/TableHeader.scss
+++ b/src/components/Table/components/TableHeader/TableHeader.scss
@@ -12,18 +12,9 @@
     border-right: 0;
   }
 
-  .TableHeader__thead--no-table &:first-child,
-  &:nth-child(2) {
+  &:first-child {
     border-left: 0;
   }
-
-  .TableHeader__thead--no-table .TableHeader__row:first-child & {
-    border-top: 0;
-  }
-}
-
-.TableHeader__thead--no-table {
-  border-bottom: 2px solid #ccc;
 }
 
 
