--- a/src/components/Table/components/TableRow/TableRow.scss
+++ b/src/components/Table/components/TableRow/TableRow.scss
@@ -1,5 +1,5 @@
 @import "../../../../style/inc";
 
 .TableRow:hover {
-  background-color: rgb(221, 238, 253);
+  background-color: $color__primary--light;
 }
