--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -4,13 +4,14 @@
   max-width: 100%;
   margin: auto;
   height: 100%;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
+  border: 1px solid $color__grey--light;
+  border-radius: 4px;
 
   display: flex;
   flex-direction: column;
   position: relative;
-
+  background: white;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
 
 .Table__screen-reader-table {
