--- a/src/components/Table/components/TableCell/TableCell.scss
+++ b/src/components/Table/components/TableCell/TableCell.scss
@@ -1,8 +1,12 @@
 @import '../../../../style/inc';
 
 .TableCell {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid $color__grey--light;
   position: relative;
+
+  tr:last-child > & {
+    border-bottom: 0;
+  }
 }
 
 .TableCell:not(:first-child) {
@@ -29,9 +33,9 @@
 }
 
 .TableCell__content--readonly {
-  color: #888;
+  color: $color__grey;
   font-style: italic;
-  padding: 10px 5px;
+  padding: $cell-padding;
 }
 
 .TableCell__content--formula {
@@ -51,7 +55,7 @@
 
 // .TableCell__content--selected {
 //   z-index: 10;
-//   box-shadow: inset 0 0 0 3px dodgerblue;
+//   box-shadow: inset 0 0 0 3px $color__primary;
 //   position: absolute;
 //   top: 0;
 //   left: 0;
@@ -62,7 +66,7 @@
   font: inherit;
   background: transparent;
   border: 0;
-  padding: 10px 5px;
+  padding: $cell-padding;
   display: block;
   outline: 0;
   text-align: inherit;
@@ -72,17 +76,17 @@
   overflow: hidden;
 
   &:focus {
-    box-shadow: inset 0 0 0 3px dodgerblue;
+    box-shadow: inset 0 0 0 3px $color__primary;
   }
 }
 
 .TableCell__content:focus {
-  box-shadow: inset 0 0 0 3px dodgerblue;
+  box-shadow: inset 0 0 0 3px $color__primary;
 }
 
 .TableCell__textarea {
   display: none;
-  //box-shadow: inset 0 0 0 1px dodgerblue;
+  //box-shadow: inset 0 0 0 1px $color__primary;
   outline: 0;
   font: inherit;
   width: 100%;
@@ -99,7 +103,7 @@
 }
 
 .TableCell__textarea:focus {
-  box-shadow: inset 0 0 0 3px dodgerblue;
+  box-shadow: inset 0 0 0 3px $color__primary;
 }
 
 .TableCell__content--editing {
@@ -116,7 +120,7 @@
 
 
 // .TableCell__content--editing {
-//   box-shadow: inset 0 0 0 3px dodgerblue;
+//   box-shadow: inset 0 0 0 3px $color__primary;
 //   min-width: 100%;
 //   min-height: 100%;
 //   max-width: 200px;
