--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,4 @@
+@import "./inc";
 * {
   padding: 0;
   margin: 0;
@@ -5,6 +6,8 @@
 }
 
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 13px;
+  color: $color__grey--dark;
+  background: $color__grey--ultra-light;
 }
