--- a/src/components/Table/components/TableBody/TableBody.scss
+++ b/src/components/Table/components/TableBody/TableBody.scss
@@ -5,3 +5,16 @@
   table-layout: fixed;
 }
 
+.TableBody__empty-cell {
+  height: 200px;
+}
+
+.TableBody__empty-content {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  font-size: 1.4rem;
+  color: $color__grey;
+  bottom: 100px;
+  left: 0;
+}
