--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -14,7 +14,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
 
-.Table__screen-reader-table {
+.Table__table {
   border-collapse: collapse;
   table-layout: fixed;
 }
