--- a/src/components/Table/components/TableCell/TableCell.scss
+++ b/src/components/Table/components/TableCell/TableCell.scss
@@ -93,7 +93,7 @@
   height: 100%;
   background: white;
   overflow: auto;
-  padding: 10px 5px;
+  padding: $cell-padding;
   border: 0;
   position: absolute;
   top: 0;
