--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,6 @@
 @import "./inc";
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+
 * {
   padding: 0;
   margin: 0;
@@ -6,8 +8,8 @@
 }
 
 html {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 14px;
   color: $color__grey--dark;
   background: $color__grey--ultra-light;
 }
