--- a/src/components/DataGrid/DataGrid.scss
+++ b/src/components/DataGrid/DataGrid.scss
@@ -1,6 +1,9 @@
 @import "../../style/inc";
 
-.DataGrid {
-
+.DataGrid__footer {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
